--- a/package.json
+++ b/package.json
@@ -23,21 +23,5 @@
     "bugs": {
         "url": "https://github.com/flomio/flomio_cordova_plugin/issues"
     },
-    "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme",
-    "dependencies": {
-        "ndef": "^0.1.3"
-    },
-    "devDependencies": {
-        "@types/node": "^7.0.12",
-        "gulp": "^3.9.1",
-        "gulp-concat": "^2.6.0",
-        "gulp-uglify": "^1.5.1",
-        "shebang-loader": "0.0.1",
-        "ts-loader": "^2.3.7",
-        "ts-node": "^3.3.0",
-        "tslint": "^5.8.0",
-        "tslint-config-standard": "^6.0.1",
-        "typescript": "^2.6.2",
-        "webpack": "^3.10.0"
-    }
+    "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme"
 }
