--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "flomio_cordova_plugin",
-    "version": "1.0.5",
+    "name": "cordova-plugin-flomio",
+    "version": "3.0.0",
     "description": "Flomio SDK integration enables NFC, BLE, and UHF RFID reader hardware.",
     "main": "www/FlomioPlugin.js",
     "scripts": {
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/flomio/flomio_cordova_plugin.git"
+        "url": "git+https://github.com/flomio/cordova-plugin-flomio.git"
     },
     "keywords": [
         "NFC",
@@ -21,7 +21,7 @@
     "author": "Richard Grundy",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/flomio/flomio_cordova_plugin/issues"
+        "url": "https://github.com/flomio/cordova-plugin-flomio/issues"
     },
-    "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme"
+    "homepage": "https://github.com/flomio/cordova-plugin-flomio#readme"
 }
