--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-    id="flomio_cordova_plugin"
+    id="cordova-plugin-flomio"
     version="1.0.2">
-    <name>flomio_cordova_plugin</name>
+    <name>cordova-plugin-flomio</name>
     <description>Flomio SDK integration enables NFC, BLE, and UHF RFID reader hardware.</description>
 
     <!-- android -->
